--- a/src/scss/cases.scss
+++ b/src/scss/cases.scss
@@ -165,10 +165,12 @@ a {
     padding: 2.5rem 3.75rem;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     font-weight: 400;
     font-size: 2.5rem;
     line-height: 1;
     background-color: transparent;
+    cursor: pointer;
   }
   &-btn3 {
     color: $white;
