--- a/src/scss/internet-shops.scss
+++ b/src/scss/internet-shops.scss
@@ -1,11 +1,10 @@
 @import "utils/typography";
 @import "utils/vars";
-//@import "fonts";
 
-//* {
-//  margin: 0;
-//  box-sizing: border-box;
-//}
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
 
 .container {
   @include widthContainer;
@@ -267,7 +266,7 @@
 
   .container {
     max-width: 1024px;
-    padding: 0 20px;
+    padding: 0 2.5rem;
   }
 
   .page {
