Internrt-shops: corrected adaptive design. 1C-integration: made adaptive design. Changed px on rem. Added some transitions.

--- a/src/scss/all-pages/prefooter.scss
+++ b/src/scss/all-pages/prefooter.scss
@@ -35,8 +35,21 @@
   &-img {
     width: 4.7rem;
     height: 4.8rem;
+    //background-color: #FFFFFF;
   }
 }
+
+//.img {
+//  &-telegramm:hover {
+//    transform: scale-color(#59D7FF, 1.2);
+//  }
+//  &-whatsApp:hover {
+//    transform: scale-color(#21E9BF, 1.2);
+//  }
+//  &-viber:hover {
+//    transform: scale-color(#C599FF, 1.2);
+//  }
+//}
 
 .feedback {
   background-color: #303030;
