--- a/src/scss/1C-integration.scss
+++ b/src/scss/1C-integration.scss
@@ -1,6 +1,5 @@
 @import "utils/typography";
 @import "utils/vars";
-@import "fonts";
 
 * {
   margin: 0;
@@ -11,26 +10,16 @@
   @include svg-sprites;
 }
 
-.svg {
-  &-arrow-slider {
-    width: 24px;
-    height: 24px;
-    position: relative;
-    bottom: 0.4em;
-  }
-  //&-resize-horizontal-round {
-  //  width: 16px;
-  //  height: 16px;
-  //}
-}
-
 .container {
   @include widthContainer;
   padding: 0 15rem;
 }
 
-.page {
+.phone {
+  display: none;
+}
 
+.page {
   &-title {
     @include page-title;
   }
@@ -38,21 +27,26 @@
   &-header {
     background-image: url("../img/integration/integration.png");
     background-size: cover;
-    height: 99px;
+    height: 12.4rem;
     display: flex;
     align-items: center;
   }
 
   &-blueBtn {
-    @include mainButton;
-    font-size: 2.25rem;
+    @include page-blueBtn;
     height: 6.7rem;
     width: 32.6rem;
-    text-transform: uppercase;
-    line-height: 1;
-    border-radius: 3px;
     position: relative;
     left: 54.5%;
+    font-size: 2.25rem;
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+    &-arrow {
+      width: 3rem;
+      height: 3rem;
+      object-fit: contain;
+    }
   }
 
   &-list {
@@ -69,7 +63,7 @@
     &-item {
       display: flex;
       align-items: center;
-      column-gap: 14px;
+      column-gap: 1.75rem;
     }
   }
 
@@ -77,7 +71,7 @@
     @include border-top;
     &-container {
       padding-top: 10rem;
-      padding-bottom: 30px;
+      padding-bottom: 3.75rem;
       display: grid;
       grid-template-columns: repeat(4, 38.1rem);
       grid-template-rows: repeat(2, auto);
@@ -88,7 +82,7 @@
     &-title {
       padding-bottom: 5rem;
       font-weight: 350;
-      font-size: 40px;
+      font-size: 5rem;
       line-height: 1;
       color: $dark;
       text-align: center;
@@ -105,9 +99,9 @@
   color: $dark;
   display: flex;
   flex-direction: column;
-  row-gap: 20px;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  row-gap: 2.5rem;
+  padding-top: 3.75rem;
+  padding-bottom: 3.75rem;
   &-header {
     font-weight: 350;
     font-size: 8.75rem;
@@ -115,10 +109,12 @@
   }
   &-block {
     display: flex;
+    column-gap: 10rem;
     &-text {
       display: flex;
       flex-direction: column;
-      row-gap: 18px;
+      row-gap: 2.25rem;
+      width: 30%;
       &-border {
         @include border-bottom;
       }
@@ -126,8 +122,8 @@
         display: flex;
         flex-direction: column;
         row-gap: 2.25rem;
-        padding-top: 30px;
-        padding-bottom: 33px;
+        padding-top: 3.75rem;
+        padding-bottom: 3.75rem;
       }
     }
   }
@@ -147,9 +143,8 @@
     }
   }
   &-img {
-    object-fit: none;
-    position: relative;
-    top: -12.5rem;
+    object-fit: contain;
+    width: 96.2rem;
   }
 }
 
@@ -159,6 +154,11 @@
       font-weight: 350;
       font-size: 2.25rem;
       line-height: 1.6;
+    }
+    &-img {
+      width: 3rem;
+      height: 3rem;
+      object-fit: cover;
     }
   }
 }
@@ -170,5 +170,125 @@
 
   &-text {
     @include pros-item-text;
+  }
+}
+
+@media (max-width : 1200px) {
+  html {
+    font-size: 6px;
+  }
+
+  .container {
+    max-width : 1200px;
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
+  .page {
+    &-breadcrumbs {
+      display: none;
+    }
+
+    &-title {
+      @include border-top;
+    }
+
+    &-header {
+      background-position: bottom;
+      background-position-x: 40%;
+    }
+  }
+
+  .content {
+    &-img {
+      width: 69.3rem;
+      object-fit: contain;
+    }
+  }
+
+  .integration {
+    &-content {
+      &-block {
+        column-gap: 5rem;
+        justify-content: space-between;
+        &-text {
+          width: 60%;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width : 800px) {
+  html {
+    font-size: 5px;
+  }
+
+  .page {
+  }
+}
+
+@media (max-width : 650px) {
+  .page {
+    &-title {
+      text-align: center;
+    }
+  }
+
+  .integration {
+    &-content {
+      &-header {
+        text-align: center;
+      }
+      &-block {
+        flex-direction: column-reverse;
+        align-items: center;
+        &-text {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width : 500px) {
+  html {
+    font-size: 4px;
+  }
+
+  .desktop {
+    display: none;
+  }
+
+  .phone {
+    display: block;
+  }
+
+  .page {
+    &-header {
+      height: 24.75rem;
+      background-position-x: 30%;
+    }
+
+    &-blueBtn {
+      height: 11rem;
+      width: 30rem;
+      span {
+        font-size: 4rem;
+      }
+      &-arrow {
+        width: 6rem;
+        height: 6rem;
+        object-fit: contain;
+      }
+    }
+  }
+
+  .integration {
+    &-content {
+      &-header {
+        text-align: center;
+      }
+    }
   }
 }
