--- a/src/scss/internet-shops.scss
+++ b/src/scss/internet-shops.scss
@@ -16,12 +16,15 @@
     @include svg-sprites;
   }
 
-  &-arrow-slider {
-    width: 24px;
-    height: 24px;
-    position: relative;
-    bottom: 0.4em;
+  &-arrow {
+    &-slider {
+      @include arrow-slider;
+    }
+    &-sliderNext {
+      transform: rotate(180deg);
+    }
   }
+
   &-resize-horizontal-round {
     position: relative;
     top: 15%;
@@ -29,13 +32,6 @@
 }
 
 .page {
-  &-breadcrumbs {
-    @include breadcrumbs;
-    &-text {
-      @include breadcrumbs-text;
-    }
-  }
-
   &-title {
     @include page-title
   }
@@ -45,15 +41,14 @@
     column-gap: 5.4rem;
     background-image: url("../img/internet-shops/background-header.png");
     background-size: cover;
-    height: 99px;
+    height: 12.4rem;
     justify-content: space-evenly;
     &-block {
       display: flex;
       column-gap: 10.4rem;
-      height: 99px;
+      height: 12.4rem;
     }
     &-cont {
-      font-style: normal;
       color: $white;
       align-self: center;
     }
@@ -72,17 +67,7 @@
   }
 
   &-blueBtn {
-    width: 26rem;
-    height: 6.7rem;
-    background-color: #01C2FF;
-    border-radius: 3px;
-    padding: 1.8rem 2.5rem;
-    font-weight: 400;
-    font-size: 2.2rem;
-    line-height: 1;
-    text-transform: uppercase;
-    color: $white;
-    align-self: center;
+    @include page-blueBtn;
   }
 
   &-pros {
@@ -260,45 +245,34 @@
 
 
 @media (max-width : 1280px){
+  .container {
+    padding: 0 2.5rem;
+  }
+
   html {
     font-size: 6px;
   }
 
-  .container {
-    max-width: 1024px;
-    padding: 0 2.5rem;
-  }
-
   .page {
     &-breadcrumbs {
-      padding-top: 1.8rem;
-      padding-bottom: 2.5rem;
+      display: none;
     }
 
     &-title {
-      padding-top: 2.5rem;
-      padding-bottom: 2.5rem;
+      @include border-top;
+      padding-top: 3.3rem;
+      padding-bottom: 3.3rem;
     }
 
     &-header {
       background-position-x: center;
-      justify-content: normal;
     }
 
     &-bonuses {
-      &-content {
-      }
-
       &-img {
         width: 83.7rem;
       }
     }
-  }
-
-  .scissors-img {
-    //position: relative;
-    //left: 6%;
-    height: min-content;
   }
 
   .internet {
@@ -343,12 +317,6 @@
 }
 
 @media (max-width : 860px) {
-  .container {
-    max-width: 860px;
-    padding: 0 16px;
-  }
-
-
   .page {
     &-bonuses {
       &-img {
@@ -357,13 +325,16 @@
         right: 16%;
       }
     }
+
+    &-blueBtn {
+      @include page-blueBtn-maxWidth650px;
+    }
   }
 
   .scissors-img {
     position: relative;
     left: -10%;
-    height: 25rem;
-    width: max-content;
+    height: 16rem;
   }
 
   .content-block {
@@ -379,11 +350,6 @@
 }
 
 @media (max-width : 690px) {
-  .container {
-    max-width: 690px;
-    padding: 0 16px;
-  }
-
   html {
     font-size: 4px;
   }
@@ -394,9 +360,8 @@
       justify-content: space-evenly;
       &-block {
         display: flex;
-        flex-direction: column;
         align-self: center;
-        column-gap: 0;
+        column-gap: 4rem;
         row-gap: 2.2rem;
         padding: 4rem 4.7rem;
         justify-content: space-between;
@@ -404,17 +369,7 @@
     }
 
     &-blueBtn {
-      width: 48.4rem;
-      height: 10.7rem;
-      background-color: transparent;
-      border-radius: 0;
-      font-size: 3.7rem;
-      text-transform: none;
-      color: $cyan;
-      align-self: center;
-      display: flex;
-      justify-content: center;
-      column-gap: 1rem;
+      font-size: 2rem;
     }
 
     &-bonuses {
@@ -451,21 +406,65 @@
   .content-block-text {
     font-size: 4.5rem;
   }
-
-
-
 }
 
-@media (max-width : 400px) {
-  .container {
-    max-width: 400px;
-    padding: 0 10px;
+@media (max-width : 550px) {
+  html {
+    font-size: 4px;
+  }
+
+  .svg {
+    &-vector {
+      &-btn {
+        display: none;
+      }
+    }
+  }
+
+  .scissors-img {
+    position: relative;
+    right: 5%;
   }
 
   .page {
     &-title {
-      font-size: 8.75rem;
       text-align: center;
     }
+
+    &-header {
+      column-gap: 0;
+      &-block {
+        flex-direction: column;
+        padding: 1rem 1.7rem;
+        row-gap: 0;
+      }
+      &-text {
+        font-size: 2rem;
+      }
+      &-boldText {
+        font-size: 3rem;
+      }
+    }
+
+    &-blueBtn {
+      @include page-blueBtn-maxWidth550px;
+    }
+
+    &-bonuses {
+      padding-top: 7rem;
+      padding-bottom: 7rem;
+      &-title {
+        &-main {
+          font-size: 7.5rem;
+        }
+        &-second {
+          font-size: 4.5rem;
+        }
+      }
+    }
+  }
+
+  .vector-btn {
+    display: block;
   }
 }
