--- a/src/scss/support.scss
+++ b/src/scss/support.scss
@@ -1,6 +1,5 @@
 @import "utils/typography";
 @import "utils/vars";
-@import "fonts";
 
 * {
   margin: 0;
@@ -16,24 +15,9 @@
   &-sprites {
     @include svg-sprites;
   }
-
-  &-resize-horizontal-round {
-    width: 16px;
-    height: 16px;
-    position: relative;
-    top: 15%;
-  }
 }
 
 .page {
-  &-breadcrumbs {
-    @include breadcrumbs;
-
-    &-text {
-      @include breadcrumbs-text;
-    }
-  }
-
   &-title {
     @include page-title;
   }
@@ -41,27 +25,32 @@
   &-header {
     background-image: url("../img/support/support.png");
     background-size: cover;
-    height: 99px;
+    height: 12.4rem;
     display: flex;
     align-items: center;
   }
 
   &-blueBtn {
-    @include mainButton;
-    font-size: 2.25rem;
+    @include page-blueBtn;
     height: 6.7rem;
-    width: 31.5rem;
-    text-transform: uppercase;
-    line-height: 1;
-    border-radius: 3px;
+    width: 32.6rem;
     position: relative;
     left: 54.5%;
+    font-size: 2rem;
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+    &-arrow {
+      width: 3rem;
+      height: 3rem;
+      object-fit: contain;
+    }
   }
 
   &-pros {
     &-container {
       padding-top: 10rem;
-      padding-bottom: 30px;
+      padding-bottom: 3.37rem;
       display: flex;
       flex-direction: column;
       row-gap: 4.37rem;
@@ -69,7 +58,7 @@
 
     &-title {
       font-weight: 350;
-      font-size: 40px;
+      font-size: 5rem;
       line-height: 1;
       color: $dark;
       text-align: center;
@@ -135,12 +124,22 @@
     &-item {
       display: flex;
       align-items: center;
-      column-gap: 14px;
+      column-gap: 1.75rem;
     }
     &-text {
       font-weight: 350;
       font-size: 2.25rem;
       line-height: 1;
+    }
+  }
+}
+
+.list {
+  &-item {
+    &-img {
+      width: 3rem;
+      height: 3rem;
+      object-fit: cover;
     }
   }
 }
@@ -196,17 +195,17 @@
       font-weight: 350;
       font-size: 2.5rem;
       line-height: 1.6;
-      padding-top: 30px;
-      padding-bottom: 30px;
+      padding-top: 3.75rem;
+      padding-bottom: 3.75rem;
     }
   }
 
   &-gallery {
     display: flex;
     flex-direction: column;
-    row-gap: 32px;
-    padding-top: 30px;
-    padding-bottom: 32px;
+    row-gap: 4rem;
+    padding-top: 3.75rem;
+    padding-bottom: 3.75rem;
     //display: grid;
     //grid-template-columns: repeat(4, 25%);
     //grid-template-rows: repeat(2, auto);
@@ -219,6 +218,7 @@
     }
     &-block {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
     }
   }
@@ -259,10 +259,9 @@
       border: 0.15rem solid $grey;
     }
     &-img {
-      width: 380px;
-      height: 448px;
+      width: 60rem;
+      height: 56rem;
       position: relative;
-      bottom: 25px;
       display: flex;
       flex-direction: column;
       &-girl {
@@ -271,10 +270,144 @@
       }
       &-shadow {
         position: relative;
-        bottom: 17%;
+        bottom: 22%;
         left: 3%;
         z-index: 0;
       }
     }
   }
+}
+
+@media (max-width : 1200px) {
+  html {
+    font-size: 6px;
+  }
+
+  .container {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
+  .page {
+    &-breadcrumbs {
+      display: none;
+    }
+
+    &-title {
+      @include border-top;
+    }
+
+    &-header {
+      background-position: bottom;
+      background-position-x: 40%;
+    }
+  }
+
+  .support {
+    &-care {
+      &-btn {
+        border: none;
+        background-color: $black;
+      }
+    }
+  }
+}
+
+@media (max-width : 900px) {
+  html {
+    font-size: 5px;
+  }
+}
+
+@media (max-width : 750px) {
+  .support {
+    &-care {
+      &-block {
+        width: 50%;
+      }
+      &-title {
+        font-size: 7rem;
+      }
+    }
+  }
+}
+
+@media (max-width : 650px) {
+  .page {
+    &-title {
+      text-align: center;
+      font-size: 7rem;
+    }
+  }
+}
+
+@media (max-width : 550px) {
+  .desktop {
+    display: none;
+  }
+
+  .support {
+    &-care {
+      height: 66rem;
+      &-cont {
+        flex-direction: column;
+      }
+      &-block {
+        width: 100%;
+        text-align: center;
+        align-items: center;
+      }
+      &-title {
+        font-size: 10rem;
+      }
+      &-text {
+        font-size: 4rem;
+      }
+      &-btn {
+        width: 23.8rem;
+        height: 8.3rem;
+        font-size: 3.3rem;
+      }
+    }
+  }
+}
+
+@media (max-width : 500px) {
+  html {
+    font-size: 4px;
+  }
+
+  .page {
+    &-header {
+      height: 24.75rem;
+    }
+
+    &-blueBtn {
+      height: 10rem;
+      width: 55rem;
+      position: relative;
+      left: 35.5%;
+      font-size: 4rem;
+      &-arrow {
+        width: 6rem;
+        height: 6rem;
+        object-fit: contain;
+      }
+    }
+  }
+
+  .support {
+    &-text {
+      &-cont {
+        font-size: 4rem;
+      }
+    }
+    &-gallery {
+      &-block {
+        flex-direction: column;
+        align-items: center;
+      }
+    }
+  }
+
 }
