--- a/src/scss/internet-shops.scss
+++ b/src/scss/internet-shops.scss
@@ -11,6 +11,10 @@
   padding: 0 15rem;
 }
 
+.phone {
+  display: none;
+}
+
 .svg {
   &-sprites {
     @include svg-sprites;
@@ -71,22 +75,32 @@
   }
 
   &-pros {
-    display: grid;
-    grid-template-columns: repeat(6, 16.6%);
-    grid-template-rows: repeat(2, auto);
+    //display: grid;
+    //grid-template-columns: repeat(6, 16.6%);
+    //grid-template-rows: repeat(2, auto);
+    &-container {
+      padding-top: 3.75rem;
+      padding-bottom: 3.75rem;
+      display: flex;
+      flex-direction: column;
+      row-gap: 4.1rem;
+    }
 
     &-title {
-      padding-bottom: 5rem;
       font-weight: 350;
       font-size: 5rem;
       line-height: 1;
       color: $dark;
       text-align: center;
-      grid-area: 1 / 1 / 2 / 7;
+    }
+    &-items {
+      display: flex;
+      column-gap: 2.5rem;
     }
 
     &-item {
       @include page-pros-item;
+      overflow: hidden;
     }
   }
 
@@ -235,12 +249,17 @@
 
 .cases-gallery-item {
   object-fit: contain;
-  width: 33%;
+  width: 52rem;
+  overflow: hidden;
 }
 
 .swiper-arrows {
   display: flex;
   column-gap: 2.4rem;
+}
+
+.swiper-slide {
+  flex-shrink: initial;
 }
 
 
@@ -355,6 +374,10 @@
     font-size: 4px;
   }
 
+  .phone {
+    display: block;
+  }
+
   .page {
     &-header {
       display: flex;
@@ -376,6 +399,13 @@
     &-bonuses {
       &-img {
         display: none;
+      }
+    }
+
+    &-pros {
+      position: relative;
+      &-item {
+        align-items: center;
       }
     }
   }
@@ -406,6 +436,30 @@
 
   .content-block-text {
     font-size: 4.5rem;
+  }
+
+  .pros {
+    &-container {
+      &-arrows {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        top: 58%;
+        .swiper-vacancy-arrow-next,.swiper-vacancy-arrow-prev{
+          height: 5rem;
+          img{
+            height: 100%;
+            width: 50%;
+          }
+        }
+      }
+    }
+  }
+
+  .swiper-slide {
+    flex-shrink: 0;
   }
 }
 
