--- a/src/scss/utils/vars.scss
+++ b/src/scss/utils/vars.scss
@@ -180,6 +180,7 @@ $maxWidth: 1920px;
   flex-direction: column;
   padding-bottom: 2.5rem;
   row-gap: 3.8rem;
+  width: 30%;
 }
 
 @mixin pros-item-header {
