--- a/src/scss/development.scss
+++ b/src/scss/development.scss
@@ -377,8 +377,8 @@
 
 .cases-gallery-item {
   object-fit: contain;
-  width: 52rem;
-  overflow: hidden;
+  //width: 52rem;
+  //overflow: hidden;
 }
 
 .swiper-arrows {
@@ -387,7 +387,7 @@
 }
 
 .swiper-slide {
-  flex-shrink: initial;
+  //flex-shrink: initial;
 }
 
 @media (max-width : 1280px) {
