--- a/src/scss/internet-shops.scss
+++ b/src/scss/internet-shops.scss
@@ -6,11 +6,6 @@
   box-sizing: border-box;
 }
 
-.container {
-  @include widthContainer;
-  padding: 0 15rem;
-}
-
 .phone {
   display: none;
 }
@@ -75,9 +70,6 @@
   }
 
   &-pros {
-    //display: grid;
-    //grid-template-columns: repeat(6, 16.6%);
-    //grid-template-rows: repeat(2, auto);
     &-container {
       padding-top: 3.75rem;
       padding-bottom: 3.75rem;
@@ -100,7 +92,6 @@
 
     &-item {
       @include page-pros-item;
-      overflow: hidden;
     }
   }
 
@@ -172,6 +163,7 @@
       display: flex;
       column-gap: 2.3rem;
       padding-top: 3.7rem;
+      padding-bottom: 3.7rem;
     }
   }
 
