--- a/src/scss/utils/vars.scss
+++ b/src/scss/utils/vars.scss
@@ -181,6 +181,7 @@ $maxWidth: 1920px;
   padding-bottom: 2.5rem;
   row-gap: 3.8rem;
   width: 30%;
+  overflow: hidden;
 }
 
 @mixin pros-item-header {
