--- a/src/scss/amocrm.scss
+++ b/src/scss/amocrm.scss
@@ -1,19 +1,8 @@
 @import "utils/typography";
 @import "utils/vars";
-@import "fonts";
-
-* {
-  margin: 0;
-  box-sizing: border-box;
-}
 
 a {
   text-decoration: none;
-}
-
-.container {
-  @include widthContainer;
-  padding: 0 15rem;
 }
 
 .svg {
@@ -23,18 +12,6 @@ a {
 }
 
 .page {
-  &-breadcrumbs {
-    @include breadcrumbs;
-
-    &-cont {
-      display: flex;
-      column-gap: 9.1rem;
-    }
-    &-text {
-      @include breadcrumbs-text;
-    }
-  }
-
   &-title {
     @include page-title;
   }
@@ -42,21 +19,26 @@ a {
   &-header {
     background-image: url("../img/support/support.png");
     background-size: cover;
-    height: 99px;
+    height: 12.4rem;
     display: flex;
     align-items: center;
   }
 
   &-blueBtn {
-    @include mainButton;
-    font-size: 2.25rem;
-    height: 6.8rem;
+    @include page-blueBtn;
+    height: 6.75rem;
     width: 34.6rem;
-    text-transform: uppercase;
-    line-height: 1;
-    border-radius: 3px;
     position: relative;
     left: 54.5%;
+    font-size: 2rem;
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+    &-arrow {
+      width: 3rem;
+      height: 3rem;
+      object-fit: contain;
+    }
   }
 
   &-list {
@@ -72,7 +54,9 @@ a {
       @include border-top;
       background-image: url("../img/amocrm/girl-amocrm.png");
       background-repeat: no-repeat;
-      background-position: right;
+      background-position: bottom;
+      background-position-x: 100%;
+      background-size: contain;
       &-block {
         display: flex;
         justify-content: space-between;
@@ -131,22 +115,24 @@ a {
   }
 
   &-pros {
-    padding-top: 3.5rem;
-    padding-bottom: 3.5rem;
-    display: grid;
-    grid-template-columns: repeat(5, 20%);
-    grid-template-rows: repeat(2, auto);
-    column-gap: 2.5rem;
-    justify-content: space-between;
+    &-container {
+      padding-top: 3.75rem;
+      padding-bottom: 3.75rem;
+      display: flex;
+      flex-direction: column;
+      row-gap: 4.1rem;
+    }
     &-title {
-      padding-bottom: 5rem;
       font-weight: 350;
       font-size: 5rem;
       line-height: 1;
       color: $dark;
       text-align: center;
-      grid-area: 1 / 1 / 2 / 6;
       }
+    &-items {
+      display: flex;
+      column-gap: 2.5rem;
+    }
     &-item {
       @include page-pros-item;
     }
@@ -166,5 +152,79 @@ a {
 
   &-text {
     @include pros-item-text;
+  }
+}
+
+@media (max-width : 1060px) {
+  html {
+    font-size: 6px;
+  }
+
+  .container {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
+  .page {
+    &-breadcrumbs {
+      display: none;
+    }
+
+    &-title {
+      @include border-top;
+    }
+
+    &-header {
+      background-position: bottom;
+      background-position-x: 40%;
+    }
+    &-list {
+      &-block {
+        background-position-x: 140%;
+        &-cont {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width : 650px) {
+  .page {
+    &-title {
+      text-align: center;
+      font-size: 7rem;
+    }
+    &-list {
+      &-block {
+        background-image: none;
+      }
+    }
+  }
+}
+
+@media (max-width : 500px) {
+  html {
+    font-size: 4px;
+  }
+
+  .page {
+    &-header {
+      height: 24.75rem;
+    }
+
+    &-blueBtn {
+      height: 8rem;
+      width: 50rem;
+      position: relative;
+      left: 35.5%;
+      font-size: 3rem;
+
+      &-arrow {
+        width: 6rem;
+        height: 6rem;
+        object-fit: contain;
+      }
+    }
   }
 }
