--- a/src/scss/crm-implement.scss
+++ b/src/scss/crm-implement.scss
@@ -1,16 +1,5 @@
 @import "utils/typography";
 @import "utils/vars";
-@import "fonts";
-
-* {
-  margin: 0;
-  box-sizing: border-box;
-}
-
-.container {
-  @include widthContainer;
-  padding: 0 15rem;
-}
 
 .svg {
   &-sprites {
@@ -26,14 +15,6 @@
 }
 
 .page {
-  &-breadcrumbs {
-    @include breadcrumbs;
-
-    &-text {
-      @include breadcrumbs-text;
-    }
-  }
-
   &-title {
     @include page-title;
   }
@@ -41,45 +22,49 @@
   &-header {
     background-image: url("../img/support/support.png");
     background-size: cover;
-    height: 99px;
+    height: 12.4rem;
     display: flex;
     align-items: center;
   }
 
   &-blueBtn {
-    @include mainButton;
-    font-size: 2.25rem;
-    height: 6.8rem;
+    @include page-blueBtn;
+    height: 6.75rem;
     width: 34.6rem;
-    text-transform: uppercase;
-    line-height: 1;
-    border-radius: 3px;
     position: relative;
     left: 54.5%;
+    font-size: 2rem;
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+    &-arrow {
+      width: 3rem;
+      height: 3rem;
+      object-fit: contain;
+    }
   }
 
   &-pros {
     @include border-top;
     &-container {
-      padding-top: 3.5rem;
-      padding-bottom: 3.5rem;
-      display: grid;
-      grid-template-columns: repeat(5, 20%);
-      grid-template-rows: repeat(2, auto);
-      column-gap: 2.5rem;
-      justify-content: space-between;
+      padding-top: 3.75rem;
+      padding-bottom: 3.75rem;
+      display: flex;
+      flex-direction: column;
+      row-gap: 4.1rem;
     }
 
     &-title {
-      padding-bottom: 5rem;
       font-weight: 350;
       font-size: 5rem;
       line-height: 1;
       color: $dark;
       text-align: center;
-      grid-area: 1 / 1 / 2 / 6;
     }
-
+    &-items {
+      display: flex;
+      column-gap: 2.5rem;
+    }
     &-item {
       @include page-pros-item;
     }
@@ -176,6 +161,9 @@
         position: absolute;
         z-index: 3;
       }
+      &-img {
+        width: 80%;
+      }
     }
 
     &-rates {
@@ -225,7 +213,7 @@
   &-img {
     position: relative;
     z-index: 0;
-    left: 30%;
+    left: 35%;
     width: 124.8rem;
     height: 93rem;
   }
@@ -252,5 +240,72 @@
     font-weight: 350;
     font-size: 2.5rem;
     line-height: 1.6;
+  }
+}
+
+@media (max-width : 1060px) {
+  html {
+    font-size: 6px;
+  }
+
+  .container {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
+  .content {
+    &-img {
+      left: 10%;
+    }
+  }
+
+  .page {
+    &-breadcrumbs {
+      display: none;
+    }
+
+    &-title {
+      @include border-top;
+    }
+
+    &-header {
+      background-position: bottom;
+      background-position-x: 40%;
+    }
+  }
+}
+
+@media (max-width : 650px) {
+  .page {
+    &-title {
+      text-align: center;
+      font-size: 7rem;
+    }
+  }
+}
+
+@media (max-width : 500px) {
+  html {
+    font-size: 4px;
+  }
+
+  .page {
+    &-header {
+      height: 24.75rem;
+    }
+
+    &-blueBtn {
+      height: 8rem;
+      width: 50rem;
+      position: relative;
+      left: 35.5%;
+      font-size: 3rem;
+
+      &-arrow {
+        width: 6rem;
+        height: 6rem;
+        object-fit: contain;
+      }
+    }
   }
 }
