--- a/src/scss/maintenance.scss
+++ b/src/scss/maintenance.scss
@@ -1,18 +1,8 @@
 @import "utils/typography";
 @import "utils/vars";
 
-* {
-  margin: 0;
-  box-sizing: border-box;
-}
-
 a {
   text-decoration: none;
-}
-
-.container {
-  @include widthContainer;
-  padding: 0 15rem;
 }
 
 .svg {
@@ -22,14 +12,6 @@ a {
 }
 
 .page {
-  &-breadcrumbs {
-    @include breadcrumbs;
-
-    &-text {
-      @include breadcrumbs-text;
-    }
-  }
-
   &-title {
     @include page-title;
   }
@@ -37,21 +19,26 @@ a {
   &-header {
     background-image: url("../img/support/support.png");
     background-size: cover;
-    height: 99px;
+    height: 12.4rem;
     display: flex;
     align-items: center;
   }
 
   &-blueBtn {
-    @include mainButton;
-    font-size: 2.25rem;
-    height: 6.8rem;
-    width: 37.25rem;
-    text-transform: uppercase;
-    line-height: 1;
-    border-radius: 3px;
+    @include page-blueBtn;
+    height: 6.75rem;
+    width: 34.6rem;
     position: relative;
     left: 54.5%;
+    font-size: 2rem;
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+    &-arrow {
+      width: 3rem;
+      height: 3rem;
+      object-fit: contain;
+    }
   }
 
   &-list {
@@ -96,25 +83,23 @@ a {
 
   &-pros {
     &-container {
-      padding-top: 10rem;
-      padding-bottom: 30px;
-      display: grid;
-      grid-template-columns: repeat(4, 38.1rem);
-      grid-template-rows: repeat(2, auto);
-      column-gap: 2.5rem;
-      justify-content: space-between;
+      padding-top: 3.75rem;
+      padding-bottom: 3.75rem;
+      display: flex;
+      flex-direction: column;
+      row-gap: 4.1rem;
     }
-
     &-title {
-      padding-bottom: 5rem;
       font-weight: 350;
-      font-size: 40px;
+      font-size: 5rem;
       line-height: 1;
       color: $dark;
       text-align: center;
-      grid-area: 1 / 1 / 2 / 7;
     }
-
+    &-items {
+      display: flex;
+      column-gap: 2.5rem;
+    }
     &-item {
       @include page-pros-item;
     }
@@ -267,5 +252,66 @@ a {
 
   &-text {
     @include pros-item-text;
+  }
+}
+
+@media (max-width : 1060px) {
+  html {
+    font-size: 6px;
+  }
+
+  .container {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
+  .page {
+    &-breadcrumbs {
+      display: none;
+    }
+
+    &-title {
+      @include border-top;
+    }
+
+    &-header {
+      background-position: bottom;
+      background-position-x: 40%;
+    }
+  }
+}
+
+@media (max-width : 650px) {
+  .page {
+    &-title {
+      text-align: center;
+      font-size: 7rem;
+    }
+  }
+}
+
+@media (max-width : 500px) {
+  html {
+    font-size: 4px;
+  }
+
+  .page {
+    &-header {
+      height: 24.75rem;
+    }
+
+    &-blueBtn {
+      height: 8rem;
+      width: 50rem;
+      position: relative;
+      left: 35.5%;
+      font-size: 3rem;
+
+      &-arrow {
+        width: 6rem;
+        height: 6rem;
+        object-fit: contain;
+      }
+    }
   }
 }
